--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://YuthanaRodjanasom.github.io/github-pages",
   "name": "git-hub-pages",
   "private": true,
   "version": "0.0.0",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages –d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "gh-pages": "^6.1.1",
