--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://yuthanarodjanasom.github.io/github-pages",
   "name": "git-hub-pages",
   "private": true,
   "version": "0.0.0",
